# SC2079-MDP-Group-21

./: .gitignore  README.md  README.md.txt  api.py  inference.ipynb  logfile.txt  model.py  picamtest.py  restart_bt.sh  restart_bt.sh.txt  run.py  run_a5.py  run_a5_without_bluetooth.py  run_risky.py  run_stm.py  run_t1.py  run_t2.py  run_t2_outdoor.py  run_take_img.py  run_test_stm.py  test.py
RPI_Server/: base_rpi.py  task1.py
RPI_Server-main/: __init__.py  base_rpi.py  pyproject.toml  task1.py
RPI_Server-main/communication/: android.py  camera.py  link.py  pi_action.py  stm32.py
RPI_Server-main/constant/: consts.py  settings.py
RPI_Server-main/test/: test_stm.py
RPI_Server/test/: test_ir.py  (+2 more)
algo/: README.md  README.md.txt  main.py  main_algo_test.py  requirements.txt
api/: README.md  README.md.txt  api.py  requirements.txt
image_rec/: README.md.txt  api_test.py  model.py
rpi/: PiLibtext.txt  README.md  __init__.py  base_rpi.py  base_t2.py  pyproject.toml  task1.py  task1_risky.py  task1_test.py  task2.py  task2_indoor.py  task2_outdoor.py  task_a5_with_bluetooth.py
rpi/base/: Week_8_archive.py  Week_9_archive.py  checkList.py  task2Finalized.py  task2PantVS.py  task2tryNew.py
rpi/base/Data_Collection_Scripts/: PiLibtext.txt  piCamera_Data_Collection.py  take_image_w_callibration.py
rpi/communication/: android.py  camera.py  camera.py.txt  stm32.py
rpi/constant/: command_utils.py  consts.py  settings.py  settings.py.txt
rpi/test/: .test_checklist_a5.py.swp  test_checklist_a5.py  test_checklist_a5_without_android.py  test_pycam2.py  test_stm.py
(+137 files in other folders)
